[package]
name = "kad"
version = "0.5.0"
repository = "https://github.com/ryankurte/rust-kad"
description = "A generic / futures based implementation of the Kademlia Distributed Hash Table (DHT)"
keywords = ["kademlia", "dht", "distributed", "hash", "table"]
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MIT / Apache-2.0"
edition = "2018"

[dependencies]
futures = "0.3.1"
futures-timer = "0.1.1"
num = { version = "0.2.0", features = ["rand"]}
structopt = "0.3.7"
rand = "0.5.5"

async-trait = "0.1.19"
tracing = "0.1.10"

rr-mux = "0.8.0"
humantime = "1.2.0"

[dependencies.log]
version = "0.4.6"
features = ["max_level_debug"]
