[package]
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "A generic / futures based implementation of the Kademlia Distributed Hash Table (DHT)"
edition = "2021"
keywords = ["kademlia", "dht", "distributed", "hash", "table"]
license = "MIT / Apache-2.0"
name = "kad"
repository = "https://github.com/ryankurte/rust-kad"
version = "0.6.1"

[features]
clap = [ "dep:clap" ]

default = [ "clap" ]


[dependencies]
async-trait = "0.1.19"
futures = "0.3.1"
futures-timer = "0.1.1"
humantime = "1.2.0"
rand = "0.5.5"
strum = "0.23.0"
strum_macros = "0.21.1"
tracing = { version = "0.1.10", features = [ "log" ] }
tracing-subscriber = { version = "0.3.17", features = [ "env-filter", ] }
clap = { version = "4.2.1", features = [ "derive" ], optional = true }
log = { features = ["max_level_debug"], version = "0.4.6" }
num = { features = ["rand"], version = "0.4.0" }
tokio = { version = "1.26.0", features = [ "full" ] }

[dev-dependencies]
rr-mux = "0.10.0"
simplelog = "0.8.0"

